skia/binding/reskia_ffi.h

void reskia_image_retain(reskia_image_t *value);
void reskia_image_release(reskia_image_t *value);
reskia_image_t *reskia_image_borrow_from_handle(sk_image_t handle);
void reskia_surface_retain(reskia_surface_t *value);
void reskia_surface_release(reskia_surface_t *value);
reskia_surface_t *reskia_surface_borrow_from_handle(sk_surface_t handle);
// Value/Object bridge (copy retain/release + borrow from handle)
reskia_paint_t *reskia_paint_retain(const reskia_paint_t *paint);
void reskia_paint_release(reskia_paint_t *paint);
reskia_paint_t *reskia_paint_borrow_from_handle(sk_paint_t handle);
reskia_path_t *reskia_path_retain(const reskia_path_t *path);
void reskia_path_release(reskia_path_t *path);
reskia_path_t *reskia_path_borrow_from_handle(sk_path_t handle);